mdapipkg/unpackaged/objects/DTC_Application__x.object
<CustomObject>
    <externalDataSource>DTCApplications</externalDataSource>
    <externalName>DTC_Application__c</externalName>
    <fields>
        <fullName>AE_Lead_Email_c__c</fullName>
        <externalDeveloperName>AE_Lead_Email__c</externalDeveloperName>
        <label>AE Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AE_Lead_Name_c__c</fullName>
        <externalDeveloperName>AE_Lead_Name__c</externalDeveloperName>
        <label>AE Lead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Community_EA_c__c</fullName>
        <externalDeveloperName>Actual_Community_EA__c</externalDeveloperName>
        <label>Actual Community EA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_DrawLoop_c__c</fullName>
        <externalDeveloperName>Actual_DrawLoop__c</externalDeveloperName>
        <label>Actual DrawLoop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Einstein_Analytics_c__c</fullName>
        <externalDeveloperName>Actual_Einstein_Analytics__c</externalDeveloperName>
        <label>Actual Einstein Analytics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Exam_c__c</fullName>
        <externalDeveloperName>Actual_Exam__c</externalDeveloperName>
        <label>Actual Exam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Grid_Buddy_c__c</fullName>
        <externalDeveloperName>Actual_Grid_Buddy__c</externalDeveloperName>
        <label>Actual Grid Buddy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_KnowWho_c__c</fullName>
        <externalDeveloperName>Actual_KnowWho__c</externalDeveloperName>
        <label>Actual KnowWho</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Platform_Normalized_c__c</fullName>
        <externalDeveloperName>Actual_Platform_Normalized__c</externalDeveloperName>
        <inlineHelpText>This is the number of unique users for this module subtracting out users accounted for larger modules like WATRS</inlineHelpText>
        <label>Actual Platform Normalized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_SDOCs_c__c</fullName>
        <externalDeveloperName>Actual_SDOCs__c</externalDeveloperName>
        <label>Actual SDOCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Service_Cloud_Normalized_c__c</fullName>
        <externalDeveloperName>Actual_Service_Cloud_Normalized__c</externalDeveloperName>
        <inlineHelpText>Number of Unique SC licenses not already consumed by a larger module (ex. Views)</inlineHelpText>
        <label>Actual Service Cloud Normalized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_SpringCM_c__c</fullName>
        <externalDeveloperName>Actual_SpringCM__c</externalDeveloperName>
        <label>Actual SpringCM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_community_c__c</fullName>
        <externalDeveloperName>Actual_community__c</externalDeveloperName>
        <label>Actual community</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_force_c__c</fullName>
        <externalDeveloperName>Actual_force__c</externalDeveloperName>
        <label>Actual force</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_service_c__c</fullName>
        <externalDeveloperName>Actual_service__c</externalDeveloperName>
        <label>Actual service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actualcommunity_plus_c__c</fullName>
        <externalDeveloperName>Actualcommunity_plus__c</externalDeveloperName>
        <label>Actualcommunity plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Description_c__c</fullName>
        <externalDeveloperName>Application_Description__c</externalDeveloperName>
        <inlineHelpText>A brief description of the application</inlineHelpText>
        <label>Application Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Architect_Primary_POC_c__c</fullName>
        <externalDeveloperName>Architect_Primary_POC__c</externalDeveloperName>
        <label>Architect Primary POC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_POC_c__c</fullName>
        <externalDeveloperName>Business_Line_POC__c</externalDeveloperName>
        <label>Business Line POC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_c__c</fullName>
        <externalDeveloperName>Business_Line__c</externalDeveloperName>
        <inlineHelpText>Please enter the agency (VHA, VBA, NCA, VACO, ect) then enter the Line of Business.</inlineHelpText>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Profile_c__c</fullName>
        <externalDeveloperName>CF_Profile__c</externalDeveloperName>
        <label>Profile</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractIntegrator_c__c</fullName>
        <externalDeveloperName>ContractIntegrator__c</externalDeveloperName>
        <label>Contract/Integrator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Citizen Developers - VA Internal teams</fullName>
                </value>
                <value>
                    <fullName>BIP- Booze Allen Hamilton</fullName>
                    <label>MBMS/BIP - Booz Allen Hamilton</label>
                </value>
                <value>
                    <fullName>EXAM - MB&amp;A</fullName>
                    <label>ExAM - MB&amp;A</label>
                </value>
                <value>
                    <fullName>VALERI - Accenture</fullName>
                </value>
                <value>
                    <fullName>VBA COE - Accenture</fullName>
                </value>
                <value>
                    <fullName>VECMS - Acumen</fullName>
                </value>
                <value>
                    <fullName>Views - Liberty/Acumen</fullName>
                    <label>VIEWS - Liberty</label>
                </value>
                <value>
                    <fullName>DTC - B3/MB&amp;A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NA - in sustainment</fullName>
                    <label>N/A - in sustainment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deploy_Merge_Branch_c__c</fullName>
        <externalDeveloperName>Deploy_Merge_Branch__c</externalDeveloperName>
        <label>Deploy Merge Branch</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deploy_Symbol_c__c</fullName>
        <externalDeveloperName>Deploy_Symbol__c</externalDeveloperName>
        <inlineHelpText>This symbol will be used for deployment activities to indicate which application a branch or package.xml is related to.</inlineHelpText>
        <label>Deploy Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dest_Org_Ext_c__c</fullName>
        <externalDeveloperName>Dest_Org_Ext__c</externalDeveloperName>
        <label>Dest Org Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Area_c__c</fullName>
        <externalDeveloperName>Focus_Area__c</externalDeveloperName>
        <label>Focus Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DMC</fullName>
                </value>
                <value>
                    <fullName>NCA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VACO</fullName>
                </value>
                <value>
                    <fullName>VBA</fullName>
                </value>
                <value>
                    <fullName>VHA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Projected_c__c</fullName>
        <externalDeveloperName>Go_Live_Date_Projected__c</externalDeveloperName>
        <label>Go-Live Date Projected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_c__c</fullName>
        <externalDeveloperName>Go_Live_Date__c</externalDeveloperName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_PII_PHI_c__c</fullName>
        <externalDeveloperName>Has_PII_PHI__c</externalDeveloperName>
        <label>Has PII/PHI?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_c__c</fullName>
        <externalDeveloperName>Health__c</externalDeveloperName>
        <label>Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Potential Risk</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hub_Org_Ext_c__c</fullName>
        <externalDeveloperName>Hub_Org_Ext__c</externalDeveloperName>
        <label>Hub Org Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Start_Date_c__c</fullName>
        <externalDeveloperName>Implementation_Start_Date__c</externalDeveloperName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Live_Status_c__c</fullName>
        <externalDeveloperName>Live_Status__c</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Projected</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                    <label>Live - Active Development</label>
                </value>
                <value>
                    <fullName>Live - In Sustainment</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>N/A - not a true module</fullName>
                    <label>N/A (not a true module)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Application Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Licenses_in_Use_c__c</fullName>
        <externalDeveloperName>No_of_Licenses_in_Use__c</externalDeveloperName>
        <label>No. of Licenses in Use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OI_T_PM_Email_c__c</fullName>
        <externalDeveloperName>OI_T_PM_Email__c</externalDeveloperName>
        <label>OI&amp;T PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OI_T_PM_Name_c__c</fullName>
        <externalDeveloperName>OI_T_PM_Name__c</externalDeveloperName>
        <label>OI&amp;T PM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_c__c</fullName>
        <externalDeveloperName>Org__c</externalDeveloperName>
        <label>Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>VAEMCC</fullName>
                </value>
                <value>
                    <fullName>VAEMPL</fullName>
                </value>
                <value>
                    <fullName>VALOB</fullName>
                </value>
                <value>
                    <fullName>VAPM</fullName>
                </value>
                <value>
                    <fullName>VAVET</fullName>
                </value>
                <value>
                    <fullName>VHA-GOV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_User_Creation_Apex_c__c</fullName>
        <externalDeveloperName>Overall_User_Creation_Apex__c</externalDeveloperName>
        <label>Overall User Creation Apex</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_User_Creation_Flow_c__c</fullName>
        <externalDeveloperName>Overall_User_Creation_Flow__c</externalDeveloperName>
        <label>Overall User Creation Flow</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSF_Primary_POC_c__c</fullName>
        <externalDeveloperName>PSF_Primary_POC__c</externalDeveloperName>
        <label>PSF Primary POC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSF_Secondary_POC_c__c</fullName>
        <externalDeveloperName>PSF_Secondary_POC__c</externalDeveloperName>
        <label>PSF Secondary POC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_DTC_Deployment_Lead_c__c</fullName>
        <externalDeveloperName>Primary_DTC_Deployment_Lead__c</externalDeveloperName>
        <label>Primary DTC Deployment Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_DTC_End_User_Support_Lead_c__c</fullName>
        <externalDeveloperName>Primary_DTC_End_User_Support_Lead__c</externalDeveloperName>
        <label>Primary DTC End User Support Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_c__c</fullName>
        <externalDeveloperName>Priority__c</externalDeveloperName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Owner_c__c</fullName>
        <externalDeveloperName>Product_Owner__c</externalDeveloperName>
        <inlineHelpText>The owner associated with this application.  Responsible for approving new user requests.</inlineHelpText>
        <label>Product Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID_c__c</fullName>
        <externalDeveloperName>Profile_ID__c</externalDeveloperName>
        <label>Profile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Community_EA_c__c</fullName>
        <externalDeveloperName>Projected_Community_EA__c</externalDeveloperName>
        <label>Projected Community EA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_DrawLoop_c__c</fullName>
        <externalDeveloperName>Projected_DrawLoop__c</externalDeveloperName>
        <label>Projected DrawLoop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Einstein_Analytics_c__c</fullName>
        <externalDeveloperName>Projected_Einstein_Analytics__c</externalDeveloperName>
        <label>Projected Einstein Analutics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Exam_c__c</fullName>
        <externalDeveloperName>Projected_Exam__c</externalDeveloperName>
        <label>Projected Exam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_GridBuddy_c__c</fullName>
        <externalDeveloperName>Projected_GridBuddy__c</externalDeveloperName>
        <label>Projected GridBuddy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_KnowWho_c__c</fullName>
        <externalDeveloperName>Projected_KnowWho__c</externalDeveloperName>
        <label>Projected KnowWho</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Platform_c__c</fullName>
        <externalDeveloperName>Projected_Platform__c</externalDeveloperName>
        <label>Projected Platform</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_SDOCS_c__c</fullName>
        <externalDeveloperName>Projected_SDOCS__c</externalDeveloperName>
        <label>Projected SDOCS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_SpringCM_c__c</fullName>
        <externalDeveloperName>Projected_SpringCM__c</externalDeveloperName>
        <label>Projected SpringCM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_community_c__c</fullName>
        <externalDeveloperName>Projected_community__c</externalDeveloperName>
        <label>Projected community</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_community_plus_c__c</fullName>
        <externalDeveloperName>Projected_community_plus__c</externalDeveloperName>
        <label>Projected community plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_service_cloud_c__c</fullName>
        <externalDeveloperName>Projected_service_cloud__c</externalDeveloperName>
        <label>Projected Service Cloud</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Approver_c__c</fullName>
        <externalDeveloperName>Secondary_Approver__c</externalDeveloperName>
        <inlineHelpText>Note: The secondary approver is for DTC awareness only (the person will have no approval role in the system)</inlineHelpText>
        <label>Secondary Approver</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_DTC_Deployment_Lead_c__c</fullName>
        <externalDeveloperName>Secondary_DTC_Deployment_Lead__c</externalDeveloperName>
        <label>Secondary DTC Deployment Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_DTC_End_User_Support_Lead_c__c</fullName>
        <externalDeveloperName>Secondary_DTC_End_User_Support_Lead__c</externalDeveloperName>
        <label>Secondary DTC End User Support Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_c__c</fullName>
        <externalDeveloperName>Size__c</externalDeveloperName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra-Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UI_Format_c__c</fullName>
        <externalDeveloperName>UI_Format__c</externalDeveloperName>
        <label>UI Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classic Only</fullName>
                </value>
                <value>
                    <fullName>Lightning, with missing functionality in Classic</fullName>
                </value>
                <value>
                    <fullName>Lightning and Classic Available</fullName>
                </value>
                <value>
                    <fullName>Lightning Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DTC Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>DTC Applications</pluralLabel>
</CustomObject>